# pysearch

./: .gitignore  Cargo.toml  LICENSE  README.md  pysearch.cpp
.cargo/: config.toml
.github/workflows/: rust.yml  search-time.yml
old/: README.md  pysearch.cpp
src/: expr.rs  gcd.rs  main.rs  matcher.rs  operator.rs  params.rs  vec.rs  vec_simd.rs
