[package]
name = "pysearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[features]
simd = []
rayon = ["dep:rayon", "hashbrown/rayon"]

[dependencies]
rayon = { version = "1.7.0", optional = true }
hashbrown = "0.14.0"

# Doesn't seem to help much:
# [profile.release]
# lto = true
