[package]
name = "pysearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3

[features]
simd = []

[dependencies]
rayon = "1.7.0"
hashbrown = { version = "0.14.0" }
num-integer = "0.1.45"
seq-macro = "0.3"

# Doesn't seem to help much:
# [profile.release]
# lto = true
