[package]
name = "pysearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1.12"
hashbrown = "0.17"
num-integer = "0.1.46"
seq-macro = "0.3"
